add s1_geo2rdr: a command line tool for getting radar coordinates of a zip file

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,3 +28,4 @@ where = src
 [options.entry_points]
 console_scripts =
     s1_info = s1reader.s1_info:main
+    s1_geo2rdr = s1reader.s1_geo2rdr:main
